# clautolisp

./: .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  COPYING  INSTALL.org  Makefile  README.md  RELEASE_NOTES.org  SPEC.md
.github/workflows/: ci.yml  release.yml
autolisp-benchmark/: Makefile  PLAN.md  README.org
autolisp-benchmark/benchmarks/: arithmetic.lsp  entity.lsp  file-io.lsp  lists.lsp  (+3 more)
autolisp-front-end/: Makefile  PLAN.md  README.org  autolisp-front-end.asd
autolisp-spec/: Makefile  PLAN.md  README.org
autolisp-test/: Makefile  PLAN.md  README.org  autolisp-test.asd
clautolisp/: Makefile  PLAN.md  README.org  clautolisp.asd
clautolisp/tools/clautolisp-gui-qt/: CMakeLists.txt  README.org  sanity-check
clautolisp/tools/clautolisp-gui-qt/documentation/: clautolisp-gui-qt-specifications.org  clautolisp-gui-qt-user-manual.org
clautolisp/tools/clautolisp-gui-qt/source/: dialog_window.cpp  dialog_window.hpp  main.cpp  sexp.cpp  sexp.hpp  wire.cpp  wire.hpp
documentation/: Makefile  autolisp-reference-notes.org  autolisp-test-development-plan.org  autolisp-visual-lisp-specification-draft.org  demonstration-script.org  development-plan.org  interactor-states.dot  poseidon-deploy.md  self-hosted-runners.md  setup-deploy.sh  setup-poseidon-website.sh  specification-resolution-plan.org  windows-package-spec.md
probe-results/: .gitignore
probes/: README.org
scripts/: resolve-emacs.sh  verify-vl-registry.lisp
sedit/: dbgsim.lisp  sedit2.lisp
specifications/: autolisp-cl-detailed-spec.org  autolisp-cl-spec-draft.org  clautolisp-spec-draft.org
(+930 files in other folders)
